<resources>
    <string name="app_name" translatable="false">Ristodroid</string>

    <string name="logo" translatable="false">Logo</string>
    <string name="welcome_title">Welcome!</string>
    <string name="choose_action">What do you want to do?</string>
    <string name="menu">Menu</string>
    <string name="bill">Bill</string>
    <string name="title_activity_dashboard" translatable="false">MainActivity</string>
    <string name="title_menu">Menu</string>
    <string name="title_summary">Summary</string>
    <string name="title_receipt">Receipt</string>
    <string name="row_category">Category</string>
    <string name="title_dishes">Dishes</string>
    <string name="euro_symbol" translatable="false">\u20ac </string>
    <string name="title_details_dish">Dish Details</string>
    <string name="button_add_dish">Add</string>

    <string name="confirm">Confirm</string>
    <string name="variations">Variations</string>
    <string name="minusText">Remove ingredients</string>
    <string name="plusText">Add ingredients</string>
    <string name="enterQuantityDish">Enter Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="titleFailedConnectionDB">Warning</string>
    <string name="messageFailedConnectionDB">Unable to connect with the Database. We will use the last menu version available. </string>
    <string name="emptyCategory">There are no dishes in this category</string>
    <string name="addQuantity">Add quantity</string>
    <string name="removeQuantity">Remove quantity</string>
    <string name="deleteDish">Delete dish</string>
    <string name="emptySummary">There are no dishes in this order</string>
    <string name="deleteDishMessage">Are you sure to delete this dish?</string>
    <string name="addDishToOrder">Dish added to order.</string>
    <string name="removeDishToOrder">Dish removed from order.</string>
    <string name="confirmOrderMessage">Are you sure you want to confirm the order? If you click OK, you will no longer be able to edit it!</string>
    <string name="closeOrderTitle">Close order</string>
    <string name="plusSymbol" translatable="false">+</string>
    <string name="minusSymbol" translatable="false">-</string>
    <string name="piece">Pcs</string>
    <string name="titleNoAddingDishCloseOrder">Order sent!</string>
    <string name="contentNoAddingDishCloseOrder">You can\'t add other dishes to this order.</string>
    <string name="NoDishFound">No dishes found</string>
    <string name="SyncFailed">Synchronization failed, the last available menu will be displayed</string>
    <string name="OrderDataRequestFailed">Error! Unable to connect to server.</string>
    <string name="receiptAvailable">Receipt not available</string>
    <string name="total">TOTAL</string>


    <!-- SEZIONE NFC  -->

    <string name="message_beaming_complete" translatable="false">Beaming complete</string>
    <string name="label_NFC_SEND">Order completed. Sending …</string>
    <string name="search">Search</string>
    <string name="nfc_sender_activity">Send order</string>
    <string name="nfc_disabled">NFC disabled on this device. Turn on to proceed</string>
    <string name="nfc_not_supported">NFC is not supported on this device. You cannot send this order!</string>

    <string name="enableNFCRequestTitle">Enable NFC</string>
    <string name="enableNFCRequestContent">NFC not enable! Turn on NFC to send this order.</string>
    <string name="Close">Close</string>
    <string name="TurnOn">Turn On</string>
    <!--
        SEZIONE DEDICATA ALLA DEFINIZIONE DEI PLURALI
    -->
    <plurals name="numberOfIngredients">
        <item quantity="one">Ingredient</item>
        <item quantity="other">Ingredients</item>
    </plurals>
    <plurals name="numberOfAllergenic">
        <item quantity="one">Allergenic</item>
        <item quantity="other">Allergenics</item>
    </plurals>
    <string name="emptyReceipt">Receipt unavaible</string>
    <string name="label_your_message">Order completed. Sending …</string>

</resources>
