<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="controllers.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_summary"
        android:name="controllers.ui.summary.SummaryFragment"
        android:label="@string/title_summary"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/navigation_receipt"
        android:name="controllers.ui.receipt.ReceiptFragment"
        android:label="@string/title_receipt"
        tools:layout="@layout/fragment_receipt" />
</navigation>